@@ -20,6 +20,7 @@ Interface changes
 ### Deleted and changed API methods
 
 ### New API functions
+- added function SCIPwithDebugSol() to determine wether SCIP was compiled with WITH_DEBUG_SOLUTION
 
 ### Command line interface
 
